add new endpoint /orders/one/{orderId} with its service
